# tracing-toolbox

./: .clippy.toml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yml
capture/: CHANGELOG.md  Cargo.toml  README.md
capture/src/: iter.rs  layer.rs  lib.rs  metrics.rs
capture/src/predicates/: combinators.rs  ext.rs  field.rs  level.rs  mod.rs  name.rs  parent.rs  target.rs  tests.rs
capture/tests/: version_match.rs
capture/tests/integration/: fib.rs  main.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/predicates_core/core/: trait.Predicate.js
implementors/predicates_core/reflection/: trait.PredicateReflection.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
metrics/: Cargo.toml
metrics-recorder/: Cargo.toml  README.md
metrics-recorder/src/: helpers.rs  lib.rs  router.rs
metrics-recorder/tests/: snapshot.rs
metrics-recorder/tests/integration/: main.rs  multithreaded.rs
metrics-recorder/tests/snapshots/: snapshot__metrics-events.snap
metrics/src/: lib.rs
metrics/tests/: integration.rs  multithread.rs
search.desc/tracing_capture/: tracing_capture-desc-0-.js
search.desc/tracing_tunnel/: tracing_tunnel-desc-0-.js
search.index/: 01f0b849a69a.js  02162cc34e3a.js  02b3a4c5b88b.js  0480b3b53c95.js  066979382875.js  06a4a750aa55.js  076c56beede9.js  0a012096ec4a.js  0db8921d04fd.js  0eb03c015abb.js  11a7318ed9ad.js  120c88c9d2fe.js  122d783e83f8.js  131a08dc6993.js  132d7a9a5cc8.js  13c20979d2ad.js  14b26aa84627.js  153619669527.js  18209a25f067.js  18db6ac7f2c8.js  1bd054c7f3d7.js  1c1e67198348.js  220fd362f41f.js  236020bf3547.js  24db57036321.js  260a9d8a826c.js  2b462016557a.js  2bee68f541bb.js  2db59d5c4aae.js  32326613c1f8.js  32cb8bacee0f.js  330af765c850.js  36b898af255e.js  3b99c872a59b.js  3c3a1678fa66.js  3d7cfe54b17b.js  3ed57c9dd2fe.js  3f49ae212da2.js  425eef47e78f.js  42f5ac90dc8f.js  (+26 more)
search.index/crateNames/: 0bfd7b423f78.js
search.index/desc/: 4dcc53ffcf31.js  7b4e13a9949b.js
search.index/entry/: 5c5621232181.js  61fb8990ce41.js
search.index/function/: 2b15b4790d08.js  af2363df31de.js
search.index/generic_inverted_index/: 3da60372a5f1.js  f64168548764.js
search.index/name/: 0e5fdca79de5.js  f41b4b31d712.js
search.index/normalizedName/: 4ff1b8588214.js  a37264d82e2b.js
search.index/path/: 96fa8d79be1c.js  e9b1730c35e5.js
search.index/type/: 8fcb4ce376a6.js  aadab134f00b.js
src/: arena.rs  capture.rs  consumer.rs  lib.rs  serde_helpers.rs  subscriber.rs  types.rs
src/consumer/: mod.rs  tests.rs
src/receiver/: tests.rs
src/tracing_capture/: iter.rs.html  layer.rs.html  lib.rs.html
src/tracing_tunnel/: lib.rs.html  sender.rs.html  types.rs.html  value.rs.html  values.rs.html
tests/: integration.rs
tests/snapshots/: integration__events-fib-5.snap
tracing_capture/: all.html  index.html  sidebar-items.js  struct.CaptureLayer.html  struct.CapturedEvent.html  struct.CapturedEvents.html  struct.CapturedSpan.html  struct.CapturedSpans.html  struct.DescendantEvents.html  struct.DescendantSpans.html  struct.SharedStorage.html  struct.SpanStats.html  struct.Storage.html  trait.Captured.html
tracing_capture/iter/: struct.CapturedEvents.html  struct.CapturedSpans.html  struct.DescendantEvents.html  struct.DescendantSpans.html
tracing_capture/layer/: struct.CaptureLayer.html  struct.SharedStorage.html  struct.Storage.html
tracing_capture/predicates/: fn.ancestor.html  fn.field.html  fn.into_fn.html  fn.level.html  fn.message.html  fn.name.html  fn.parent.html  fn.target.html  fn.value.html  index.html  sidebar-items.js  struct.AncestorPredicate.html  struct.And.html  struct.FieldPredicate.html  struct.LevelPredicate.html  struct.MessagePredicate.html  struct.NamePredicate.html  struct.Or.html  struct.ParentPredicate.html  struct.Scanner.html  struct.TargetPredicate.html  struct.ValuePredicate.html  trait.IntoFieldPredicate.html  trait.IntoLevelPredicate.html  trait.IntoTargetPredicate.html  trait.ScanExt.html
tracing_tunnel/: all.html  enum.CallSiteKind.html  enum.ReceiveError.html  enum.TracedValue.html  enum.TracingEvent.html  enum.TracingLevel.html  index.html  sidebar-items.js  struct.CallSiteData.html  struct.DebugObject.html  struct.LocalSpans.html  struct.PersistedMetadata.html  struct.PersistedSpans.html  struct.Synced.html  struct.TracedError.html  struct.TracedValues.html  struct.TracedValuesIter.html  struct.TracingEventReceiver.html  struct.TracingEventSender.html  trait.EventSync.html  trait.FromTracedValue.html  type.MetadataId.html  type.RawSpanId.html
tracing_tunnel/receiver/: enum.ReceiveError.html  struct.LocalSpans.html  struct.PersistedMetadata.html  struct.PersistedSpans.html  struct.TracingEventReceiver.html
tracing_tunnel/sender/: struct.TracingEventSender.html  trait.EventSync.html
tracing_tunnel/types/: enum.CallSiteKind.html  enum.TracingEvent.html  enum.TracingLevel.html  struct.CallSiteData.html  type.MetadataId.html  type.RawSpanId.html
tracing_tunnel/value/: enum.TracedValue.html  struct.DebugObject.html  trait.FromTracedValue.html
tracing_tunnel/values/: struct.TracedValues.html  struct.TracedValuesIter.html
tunnel/: CHANGELOG.md  Cargo.toml  README.md
tunnel/src/: lib.rs  sender.rs  serde_helpers.rs  stack.rs  types.rs  value.rs  values.rs
tunnel/src/receiver/: arena.rs  mod.rs  tests.rs
tunnel/src/sender/: mod.rs  sync.rs
tunnel/tests/integration/: fib.rs  main.rs
tunnel/tests/integration/snapshots/: integration__events-fib-5.snap
type.impl/std/: primitive.u64.js
(+90 files in other folders)
