[workspace]
members = ["capture", "tunnel"]
resolver = "2"

[workspace.package]
version = "0.2.0-beta.1"
edition = "2021"
rust-version = "1.74"
authors = [
  "Alex Ostrovski <ostrovski.alex@gmail.com>",
  "Thom Wright <github@thomwright.co.uk>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/tracing-toolbox"

[workspace.dependencies]
# `tracing` dependencies
tracing = "0.1.37"
tracing-core = "0.1.30"
tracing-subscriber = { version = "0.3.16", default-features = false }
# Test dependencies
assert_matches = "1.5.0"
doc-comment = "0.3.3"
insta = { version = "1.39.0", features = ["yaml"] }
version-sync = "0.9.4"
