[workspace]
members = ["capture", "tunnel"]
resolver = "2"

[workspace.package]
version = "0.2.0-beta.1"
edition = "2021"
rust-version = "1.74"
authors = [
  "Alex Ostrovski <ostrovski.alex@gmail.com>",
  "Thom Wright <github@thomwright.co.uk>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/tracing-toolbox"

[workspace.dependencies]
# External dependencies
assert_matches = "1.5.0"
doc-comment = "0.3.4"
id-arena = "2.2.1"
insta = { version = "1.43.2", features = ["yaml"] }
once_cell = "1.21.3"
predicates = { version = "3.1.3", default-features = false }
serde = { version = "1", default-features = false }
tracing = "0.1.41"
tracing-core = { version = "0.1.34", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false }
version-sync = "0.9.4"

# Workspace dependencies
tracing-tunnel = { version = "=0.2.0-beta.1", path = "tunnel" }
