[package]
name = "tracing-capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["tracing", "testing", "assertion", "predicate"]
categories = ["development-tools::testing", "development-tools::debugging"]
description = "Capturing tracing spans and events, e.g. for testing"

[badges]
maintenance = { status = "experimental" }

[dependencies]
# Public dependencies (present in the public API of the crate).
predicates = { version = "3.0.1", default-features = false }
tracing-core.workspace = true
tracing-subscriber = { workspace = true, features = ["std", "registry"] }
# Private dependencies.
id-arena = "2.2.1"
tracing-tunnel = { version = "0.2.0-beta.1", path = "../tunnel" }

[dev-dependencies]
assert_matches.workspace = true
doc-comment.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["default"] }
version-sync.workspace = true

tracing-tunnel = { version = "0.2.0-beta.1", path = "../tunnel", features = ["sender", "receiver"] }
