[package]
name = "tracing-metrics-recorder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["tracing", "logging", "wasm"]
categories = ["development-tools::debugging", "development-tools::testing"]
description = "Metrics recorder that outputs metric updates as tracing events"

[badges]
maintenance = { status = "experimental" }

[dependencies]
metrics = "0.21.0"
tracing.workspace = true

[dev-dependencies]
doc-comment.workspace = true
insta.workspace = true
metrics-util = { version = "0.15.0", default-features = false, features = ["debugging"] }
serial_test = { version = "3", default-features = false }
tracing-subscriber = { workspace = true, features = ["default"] }
version-sync.workspace = true

tracing-capture = { version = "0.1.0", path = "../capture" }
tracing-tunnel = { version = "0.1.0", path = "../tunnel", features = ["sender"] }
