[package]
name = "tracing-tunnel"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["tracing", "logging", "wasm"]
categories = ["development-tools::debugging", "development-tools::ffi", "wasm"]
description = "Tunnelling tracing information across API boundary"
repository = "https://github.com/slowli/tracing-toolbox"

[package.metadata.docs.rs]
all-features = true
# Set `docsrs` to enable unstable `doc(cfg(...))` attributes.
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
# Public dependencies (present in the public API of the crate).
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
tracing-core = { version = "0.1.30", default-features = false }
# Private dependencies.
once_cell = { version = "1.16.0", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
doc-comment = "0.3.3"
insta = { version = "1.22.0", features = ["yaml"] }
serde_json = "1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["registry", "fmt"] }
version-sync = "0.9.4"

[features]
default = ["std"]
# Enables std-related functionality. Note that this is required on the `receiver`
# end of the tunnel.
std = ["tracing-core/std"]
# Enables `TracingEventSender`.
sender = []
# Enables `TracingEventReceiver` and closely related types.
receiver = ["std", "once_cell"]

[[test]]
name = "integration"
path = "tests/integration/main.rs"
required-features = ["sender", "receiver"]
