[package]
name = "tracing-tunnel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["tracing", "logging", "wasm"]
categories = ["development-tools::debugging", "development-tools::ffi", "wasm"]
description = "Tunnelling tracing information across API boundary"

[package.metadata.docs.rs]
all-features = true
# Set `docsrs` to enable unstable `doc(cfg(...))` attributes.
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
# Public dependencies (present in the public API of the crate).
serde = { version = "1", default-features = false, features = [
    "alloc",
    "derive",
] }
tracing-core = { version = "0.1.30", default-features = false }
# Private dependencies.
thread_local = "1.1.8"

once_cell = { version = "1.20.2", optional = true }
[dev-dependencies]
assert_matches.workspace = true
doc-comment.workspace = true
insta.workspace = true
serde_json = "1"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["default"] }
version-sync.workspace = true

[features]
default = ["std"]
# Enables std-related functionality. Note that this is required on the `receiver`
# end of the tunnel.
std = ["tracing-core/std"]
# Enables `TracingEventSender`.
sender = []
# Enables `TracingEventReceiver` and closely related types.
receiver = ["std", "once_cell"]

[[test]]
name = "integration"
path = "tests/integration/main.rs"
required-features = ["sender", "receiver"]
